--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "highcharts": "^11.0.1",
+    "highcharts-react-official": "^3.2.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
